# fabulinus

./: .gitignore  Cargo.toml  README.md
server/: Cargo.toml
server/src/: db.rs  main.rs  mongo.rs  template.rs
src/: db.rs  index.html
webui/src/: App.svelte  store.js
