[package]
name = "priberamos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.0.2"
tokio = { version = "1.14.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
futures = "0.3.15"
tinytemplate = "1.1"
serde = { version = "1.0", features = ["derive"] }